--- a/Mymodel.html
+++ b/Mymodel.html
@@ -111,7 +111,7 @@ function initialize()
 	markerRoot1 = new THREE.Group();
 	scene.add(markerRoot1);
 	let markerControls1 = new THREEx.ArMarkerControls(arToolkitContext, markerRoot1, {
-		type: 'pattern', patternUrl: "data/A2340_ZS.patt",
+		type: 'pattern', patternUrl: "data/okay.patt",
 	})
 
 	let geometry1 = new THREE.PlaneBufferGeometry(1,1, 4,4);
