--- a/Mymodel.html
+++ b/Mymodel.html
@@ -306,6 +306,11 @@ function animate()
 }
 
 </script>
+<script >
+document.body.addEventListener('touchmove', function (e) {
+  e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
+}, {passive: false});
 
+</script>
 </body>
 </html>
