--- a/Mymodel.html
+++ b/Mymodel.html
@@ -234,9 +234,9 @@ function LoadData(path)
 			gltfobject.position.copy(poivector);
 
 			gltfobject.name="mymodel"
-			console.log( 'scale:'+scale );
-			gltfobject.scale.multiplyScalar(scale*0.001);//约束比例
-
+			console.log( 'scale1:'+gltfobject.scale );
+			gltfobject.scale.multiplyScalar(0.01);//约束比例
+			console.log( 'scale2:'+gltfobject.scale );
 			markerRoot1.add(gltfobject);
 			scene.add( markerRoot1 );
 
