--- a/Mymodel.html
+++ b/Mymodel.html
@@ -234,9 +234,9 @@ function LoadData(path)
 			gltfobject.position.copy(poivector);
 
 			gltfobject.name="mymodel"
-			console.log( 'scale1:'+gltfobject.scale );
+			console.log( 'scale1:'+gltfobject.scale.x );
 			gltfobject.scale.multiplyScalar(0.01);//约束比例
-			console.log( 'scale2:'+gltfobject.scale );
+			console.log( 'scale2:'+gltfobject.scale.x );
 			markerRoot1.add(gltfobject);
 			scene.add( markerRoot1 );
 
