--- a/Mymodel.html
+++ b/Mymodel.html
@@ -70,6 +70,10 @@ function initialize()
 		antialias : true,
 		alpha: true
 	});
+	renderer.gammaInput = true;
+	renderer.gammaOutput = true;
+	renderer.autoClear = false;
+	
 	renderer.setClearColor(new THREE.Color('lightgrey'), 0)
 	renderer.setSize( 640, 480 );
 	renderer.domElement.style.position = 'absolute'
