--- a/Mymodel.html
+++ b/Mymodel.html
@@ -297,10 +297,10 @@ function LoadData(path)
 function update()
 {
 	//controls.update();
-	if ( markerRoot1.visible  &&  gltfobject!=undefined)
-	{
-		  gltfobject.rotation.y += 0.01;
-	}	
+// 	if ( markerRoot1.visible  &&  gltfobject!=undefined)
+// 	{
+// 		  gltfobject.rotation.y += 0.01;
+// 	}	
 
 	// update artoolkit on every frame
 	if ( arToolkitSource.ready !== false )
