--- a/Mymodel.html
+++ b/Mymodel.html
@@ -66,7 +66,7 @@ function initialize()
 	};
 	renderer = new THREE.WebGLRenderer({ 
 		precision:"highp", 
-		logarithmicDepthBuffer:true,
+		//logarithmicDepthBuffer:true,
 		antialias : true,
 		alpha: true
 	});
