--- a/Mymodel.html
+++ b/Mymodel.html
@@ -19,6 +19,8 @@
 	<script src="js/DRACOLoader.js"></script>
 	<script src="js/GLTFLoadernew.js"></script>
 	<script src="js/TrackballControls.js"></script>
+	<script src="js/OrbitControls.js"></script>
+	
 </head>
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
