--- a/Mymodel.html
+++ b/Mymodel.html
@@ -18,7 +18,7 @@
 
 	<script src="js/DRACOLoader.js"></script>
 	<script src="js/GLTFLoadernew.js"></script>
-	<script src="js/TrackballControls.js"></script>
+<!-- 	<script src="js/TrackballControls.js"></script> -->
 	<script src="js/OrbitControls.js"></script>
 	
 </head>
@@ -59,7 +59,7 @@ function initialize()
 	scene.add(camera);
 
 	controls = new THREE.OrbitControls( camera );
-	controls.target.set( 0, 0, 0 );
+	controls.target.set( 0, 0.5, 0 );
 	controls.minDistance = 1;
 	controls.maxDistance = 50;
 	controls.update();
