--- a/Mymodel.html
+++ b/Mymodel.html
@@ -258,7 +258,7 @@ function LoadData(path)
         // controls = new THREE.OrbitControls( gltfobject );
 	    // controls.target.set( 0, 0, 0 );
 	 
-	controls.update();
+	//controls.update();
 			//controls.target.copy(poivector);
 			//controls.reset();
 			//camera.position.z = 1000;
