--- a/Mymodel.html
+++ b/Mymodel.html
@@ -21,6 +21,7 @@
 <!-- 	<script src="js/TrackballControls.js"></script> -->
 	<script src="js/OrbitControls.js"></script>
 	<script src="js/ObjectControls.js"></script>
+	<script src="js/dat.gui.min.js"></script>
 	
 </head>
 
@@ -44,11 +45,14 @@ var manager;
 var objcontrols;
 var poivector = new THREE.Vector3(0,0,0);
 var gltfobject ;
+var gui ;
+var distance;
 initialize();
 animate();
 
 function initialize()
 {
+	  gui = new dat.GUI();
 	scene = new THREE.Scene();
 
 	let ambientLight = new THREE.AmbientLight( 0xffffff, 1.0 );
@@ -250,17 +254,33 @@ function LoadData(path)
 
 			console.log( 'scale1:',gltfobject.scale.x );
 			gltfobject.scale.multiplyScalar(0.01);//约束比例
-			console.log( 'scale2:',gltfobject.scale.x );
-			var distance =camera.position.distanceTo(gltfobject.position);
+			distance =camera.position.distanceTo(gltfobject.position);
 			console.log( 'distance:', distance);
-				
+		 
+			console.log( 'scale2:',gltfobject.scale.x );
+
 			markerRoot1.add(gltfobject);
 			scene.add( markerRoot1 );
+			var folder = gui.addFolder('场景');
+			var data = {
+					"距离目标" : distance,
+					"缩放比例" : gltfobject.scale.x
+					 
+				}
+			folder.add( data, "距离目标" ).onChange( function (   ) {
+
+ 				} );
+			folder.add( data, "缩放比例", 0.001, 10 ).onChange( function(){ 
+
+			});
+
+
+
 			objcontrols =new THREE.ObjectControls(camera, renderer.domElement, gltfobject);
-        // controls = new THREE.OrbitControls( gltfobject );
-	    // controls.target.set( 0, 0, 0 );
+			// controls = new THREE.OrbitControls( gltfobject );
+			// controls.target.set( 0, 0, 0 );
 	 
-	//controls.update();
+			//controls.update();
 			//controls.target.copy(poivector);
 			//controls.reset();
 			//camera.position.z = 1000;
