--- a/Mymodel.html
+++ b/Mymodel.html
@@ -46,7 +46,12 @@ var objcontrols;
 var poivector = new THREE.Vector3(0,0,0);
 var gltfobject ;
 var gui ;
-var distance;
+var distance=0;
+var datagui = {
+					"距离目标" : 0,
+					"缩放比例" : 0.01
+					 
+				}
 initialize();
 animate();
 
@@ -262,15 +267,12 @@ function LoadData(path)
 			markerRoot1.add(gltfobject);
 			scene.add( markerRoot1 );
 			var folder = gui.addFolder('场景');
-			var data = {
-					"距离目标" : distance,
-					"缩放比例" : gltfobject.scale.x
-					 
-				}
-			folder.add( data, "距离目标" ).onChange( function (   ) {
+			datagui.距离目标=distance;
+			datagui.缩放比例=gltfobject.scale.x ;
+			folder.add( datagui, "距离目标" ).onChange( function (   ) {
 
  				} );
-			folder.add( data, "缩放比例", 0.001, 10 ).onChange( function(){ 
+			folder.add( datagui, "缩放比例", 0.001, 10 ).onChange( function(){ 
 
 			});
 
