--- a/Mymodel.html
+++ b/Mymodel.html
@@ -266,13 +266,13 @@ function LoadData(path)
 
 			markerRoot1.add(gltfobject);
 			scene.add( markerRoot1 );
-			var folder = gui.addFolder('场景');
+			//var folder = gui.addFolder('场景');
 			datagui.距离目标=distance;
 			datagui.缩放比例=gltfobject.scale.x ;
-			folder.add( datagui, "距离目标" ).onChange( function (   ) {
+			gui.add( datagui, "距离目标" ).onChange( function (   ) {
 
  				} );
-			folder.add( datagui, "缩放比例", 0.001, 10 ).onChange( function(){ 
+			gui.add( datagui, "缩放比例", 0.001, 10 ).onChange( function(){ 
 
 			});
 
