--- a/Mymodel.html
+++ b/Mymodel.html
@@ -332,6 +332,10 @@ function update()
 		  gltfobject.rotation.y += 0.01;
 	}	
 
+	distance =camera.position.distanceTo(gltfobject.position);
+	datagui.距离目标=distance;
+	datagui.缩放比例=gltfobject.scale.x ;
+	
 	// update artoolkit on every frame
 	if ( arToolkitSource.ready !== false )
 		arToolkitContext.update( arToolkitSource.domElement );
