--- a/Mymodel.html
+++ b/Mymodel.html
@@ -269,6 +269,7 @@ function LoadData(path)
 			//var folder = gui.addFolder('场景');
 			datagui.距离目标=distance;
 			datagui.缩放比例=gltfobject.scale.x ;
+			alert(distance);
 			gui.add( datagui, "距离目标" ,0.1,100 ).onChange( function (   ) {
 
  				} );
