--- a/Mymodel.html
+++ b/Mymodel.html
@@ -48,8 +48,8 @@ var gltfobject ;
 var gui ;
 var distance=0;
 var datagui = {
-					"距离目标" : 0,
-					"缩放比例" : 0.01
+					"距离目标" : distance,
+					"缩放比例" : 0.0001
 					 
 				}
 initialize();
