--- a/Mymodel.html
+++ b/Mymodel.html
@@ -332,7 +332,7 @@ function update()
 	{
 		gltfobject.rotation.y += 0.01;
 		distance =camera.position.distanceTo(markerRoot1.position);
-		alert(distance+"—— "+ camera.position.x+" —— "+camera.position.y +" —— "+camera.position.z );
+		//alert(distance+"—— "+ camera.position.x+" —— "+camera.position.y +" —— "+camera.position.z );
 		datagui.距离目标=distance;
 		datagui.缩放比例=gltfobject.scale.x ;
 	}	
