--- a/Mymodel.html
+++ b/Mymodel.html
@@ -333,7 +333,7 @@ function update()
 		gltfobject.rotation.y += 0.01;
 		distance =camera.position.distanceTo(markerRoot1.position);
 		//alert(distance+"—— "+ camera.position.x+" —— "+camera.position.y +" —— "+camera.position.z );
-		datagui.距离目标=distance;
+		datagui.距离目标=gltfobject.rotation.y;
 		datagui.缩放比例=gltfobject.scale.x ;
 	}	
  
