--- a/Mymodel.html
+++ b/Mymodel.html
@@ -58,7 +58,7 @@ animate();
 
 function initialize()
 {
-	  gui = new dat.GUI();
+	 // gui = new dat.GUI();
 	scene = new THREE.Scene();
 
 	let ambientLight = new THREE.AmbientLight( 0xffffff, 1.0 );
