--- a/Mymodel.html
+++ b/Mymodel.html
@@ -138,7 +138,7 @@ function initialize()
 	
 	// copy projection matrix to camera when initialization complete
 	arToolkitContext.init( function onCompleted(){
-		camera.projectionMatrix.copy( arToolkitContext.getProjectionMatrix() );
+		//camera.projectionMatrix.copy( arToolkitContext.getProjectionMatrix() );
 	});
 
 	////////////////////////////////////////////////////////////
