--- a/Mymodel.html
+++ b/Mymodel.html
@@ -133,7 +133,7 @@ function initialize()
 	// create atToolkitContext
 	arToolkitContext = new THREEx.ArToolkitContext({
 		cameraParametersUrl: 'data/camera_para.dat',
-		detectionMode: 'color'
+		detectionMode: 'mono_and_matrix',
 	});
 	
 	// copy projection matrix to camera when initialization complete
