--- a/Mymodel.html
+++ b/Mymodel.html
@@ -149,7 +149,7 @@ function initialize()
 	markerRoot1 = new THREE.Group();
 	scene.add(markerRoot1);
 	let markerControls1 = new THREEx.ArMarkerControls(arToolkitContext, markerRoot1, {
-		type: 'pattern', patternUrl: "data/E1225.patt",changeMatrixMode : 'cameraTransformMatrix',
+		type: 'pattern', patternUrl: "data/E1225.patt",changeMatrixMode : 'modelViewMatrix',
 	})
 	
 // 	let geometry1 = new THREE.PlaneBufferGeometry(1,1, 4,4);
