--- a/anhuivideo.html
+++ b/anhuivideo.html
@@ -18,13 +18,13 @@ p { font-family: verdana,helvetica,arial; font-size: 0.8em; color: #333 }
 
 <div >
 <video poster="fm1.jpg" style="height:900px;width: 900px"  controls="controls"  >
-  <source src="老馆建筑变迁史纪录片.mp4" type="video/mp4" />
-  Video not playing? <a href="老馆建筑变迁史纪录片.mp4">Download file</a> instead.
+  <source src="video1.mp4" type="video/mp4" />
+  Video not playing? <a href="video1.mp4">Download file</a> instead.
 </video>
  
 <video poster="fm2.jpg" style="height:900px;width:900px"  controls="controls"  >
-  <source src="老馆建筑风貌展示三维动画片.mp4" type="video/mp4" />
-  Video not playing? <a href="老馆建筑风貌展示三维动画片.mp4">Download file</a> instead.
+  <source src="video1.mp4" type="video/mp4" />
+  Video not playing? <a href="video1.mp4">Download file</a> instead.
 </video>
 
 </div>
